<resources>

    <string name="app_name">HotelBooking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_version">App Version</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate Us</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share your Birthday details with us, so we can \ncustomise our services for you</string>
    <string name="good_afternoon">Good Afternoon,</string>
    <string name="flights">Flights</string>
    <string name="for_you">For You: FLAT 12% OFF*</string>
    <string name="on_your_1st">on Your 1st Flight Booking</string>
    <string name="use_code">Use Code</string>
    <string name="airport_cabs">Airport Cabs</string>
    <string name="my_trips">My Trips</string>
    <string name="add_booking">Add Booking</string>
    <string name="start">Start exploring for your next trip</string>
    <string name="no_b">No bookings yet</string>
    <string name="view_and_manage">View and manage, a booking by entering the booking ID here.For verifying the details,an OTP will be sent to th customer who has made the booking.</string>
    <string name="booking_id">Booking ID</string>
    <string name="enter_a_booking_id">Enter a Booking ID</string>
    <string name="add_book">Add Booking</string>
    <string name="send_otp">Send OTP</string>
    <string name="flagship_hotel_stores">Flagship Hotel Stores</string>
    <string name="ccg_earth_experience_hotels">CGH Earth \nExperience Hotels</string>
    <string name="welcomeheritage">WelcomeHeritage</string>
    <string name="experience">"Experience the world of hosting \nwith MakeMyTrip "</string>
    <string name="got_some_extra_space_turn_it_into_income">Got some extra space? Turn it into income by\nhosting with us. We literally bring hosting to your\nfingertips. All it takes is just 15 minutes,a few taps and\nyou are ready to host!</string>
    <string name="know_more">KNOW MORE</string>
    <string name="mycash">MyCash</string>
    <string name="discover">Discover more than travel</string>
    <string name="refer_earn"><![CDATA[Refer &\n Earn]]></string>
    <string name="flight_status">Flight\nStatus</string>
    <string name="pnr_status">PNR\nStatus</string>
    <string name="ease_of">Ease of Money. Peace of\nMind.</string>
    <string name="preferred_netflix_godrej"><![CDATA[Preferred Netflix ,Godrej,Vendanta,Bajaj\n& 49,000 business.Join the big league!]]></string>
    <string name="gst_invoice"><![CDATA[GST Invoice Assurance & Solution]]></string>
    <string name="free_cancel">Free Cancellation on Flights</string>
    <string name="zero_sub">Zero Subscription Cost</string>
    <string name="login_signup">LOGIN/SIGNUP</string>
    <string name="forget_login_id">Forget Login ID?</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="conti">CONTINUE</string>
    <string name="or">- OR -</string>
    <string name="by_proceeding"><![CDATA[By proceeding, you agree to <b>MakeMyTrip\'s</b> Privacy Policy, User Agreement,\nT&C\'s]]></string>
    <string name="available_balance">Available Balance</string>
    <string name="earn_more_wallet"><![CDATA[Earn more wallet Balance & get Discounts]]></string>
    <string name="refer"><![CDATA[Refer & Earn]]></string>
    <string name="add_voucher">Add Voucher</string>
    <string name="google_business_account">Google Business Account</string>
    <string name="location_name">Location Name</string>
    <string name="hotel_shanti">Hotel Shanti Plaza By Haveliya Hotels</string>
    <string name="delhi">Delhi</string>
    <string name="discover_places">Discover Places</string>
    <string name="holiday_packages">Holiday \nPackages</string>
    <string name="book_your_flights_with_our">Book Your flights with our\nAI travel expert, Gia!</string>
    <string name="flights_s">Flights</string>
    <string name="hotels_homestays"><![CDATA[Hotels & Homestays]]></string>
    <string name="hourly_stays">HOURLY\nSTAYS</string>
    <string name="book_for_3_6_or_9_hours">BOOK FOR 3, 6 OR 9 HOURS!</string>
    <string name="flexible_slots_great_savings">Flexible slots, great savings</string>
    <string name="daily_steals_deals"><![CDATA[Daily Steals Deals >]]></string>
    <string name="lowest">Lowest ever prices on top-rated hotels</string>
    <string name="holiday_pa">Holiday Packages</string>
    <string name="india_and_international">India and International</string>

</resources>