<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cash_bg"
    tools:context=".MyCashActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/back" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_margin="10dp"
            android:src="@drawable/refresh" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/cash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:text="@string/mycash"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/Available"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cash"
        android:layout_margin="20dp"
        android:background="@drawable/balance_bg"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/available_balance"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/logo" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/balance"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/coin"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/dollar" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/error_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/error"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/alert" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/earn_more_wallet"
                android:textColor="#E65100"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/error_layout"
            android:background="@color/white"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/refer"
                style="@style/Theme.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:text="@string/refer"
                android:textColor="@color/black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add"
                style="@style/Theme.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="7dp"
                android:layout_weight="1"
                android:text="@string/add_voucher"
                android:textColor="@color/black" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>